--- a/settings.ui
+++ b/settings.ui
@@ -77,7 +77,7 @@
         <enum>QLayout::SetMinimumSize</enum>
        </property>
        <item>
-        <widget class="QPushButton" name="pushButton">
+        <widget class="QPushButton" name="pb_myNick">
          <property name="minimumSize">
           <size>
            <width>0</width>
@@ -96,13 +96,16 @@
            <height>0</height>
           </size>
          </property>
+         <property name="styleSheet">
+          <string notr="true"/>
+         </property>
          <property name="text">
           <string/>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_2">
+        <widget class="QPushButton" name="pb_otherNick">
          <property name="minimumSize">
           <size>
            <width>20</width>
@@ -127,7 +130,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_3">
+        <widget class="QPushButton" name="pb_font">
          <property name="minimumSize">
           <size>
            <width>20</width>
