добавленны иконки, окно "about"
исправленно поле ввода, исправленна кнопка шифрования на панели
инструментов

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -19,6 +19,10 @@
   <property name="windowTitle">
    <string>QChat v0.5</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="resource.qrc">
+    <normaloff>:/icon/resource/icon/icon.ico</normaloff>:/icon/resource/icon/icon.ico</iconset>
+  </property>
   <property name="toolButtonStyle">
    <enum>Qt::ToolButtonIconOnly</enum>
   </property>
