--- a/resource.qrc
+++ b/resource.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/icon">
         <file>resource/icon/encrypt.ico</file>
         <file>resource/icon/noEncrypt.ico</file>
+        <file>resource/icon/icon.ico</file>
+        <file>resource/icon/icon32.ico</file>
     </qresource>
 </RCC>
